<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded">
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
            android:background="@drawable/rounded">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"

                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:text="@string/setts_txt"
                    android:id="@+id/textView"
                    android:layout_gravity="center"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/activity_vertical_margin" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_name"
                    android:hint="@string/setts_field_name"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_surname"
                    android:hint="@string/setts_field_surname"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_country"
                    android:hint="@string/setts_field_country"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_city"
                    android:hint="@string/setts_field_city"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_age"
                    android:hint="@string/setts_field_age"
                    android:singleLine="true"
                    android:inputType="number"
                    android:background="@android:drawable/editbox_background"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_old_pass"
                    android:hint="@string/setts_field_pass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_new_pass"
                    android:hint="@string/setts_field_newpass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/setts_rep_new_pass"
                    android:hint="@string/setts_field_reppass"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:background="@android:drawable/editbox_background"/>

            </LinearLayout>

            <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/change_language"
                            android:gravity="center"/>
                        <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/langswitcher"
                            android:spinnerMode="dialog" />

                    </LinearLayout>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/change_language"
                        android:id="@+id/edit_language"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@android:drawable/dialog_holo_light_frame"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />


                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setts_btn"
                        android:id="@+id/setts_btn"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@android:drawable/dialog_holo_light_frame"/>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/setts_btn_exit"
                        android:id="@+id/setts_btn_exit"
                        android:layout_weight="1"
                        android:layout_gravity="center"
                        android:background="@android:drawable/dialog_holo_light_frame"/>
                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="8dp" />
                </LinearLayout>


        </LinearLayout>

        </LinearLayout>

    </ScrollView>


</LinearLayout>