<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/custom_dialog"
    android:gravity="center"
    android:paddingBottom="16dp"
    android:paddingTop="16dp"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:drawable/dialog_holo_light_frame">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/question"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/your_question"
                android:hint="@string/your_question"
                android:gravity="center"
                android:background="@android:drawable/editbox_background" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="8dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@android:drawable/dialog_holo_light_frame">
            <TextView
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/answer"
                android:textStyle="bold"
                android:textSize="@dimen/text_size"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/your_answer"
                android:hint="@string/your_answer"
                android:gravity="center"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>

    </LinearLayout>




</LinearLayout>