<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingRight="16dp"
    android:paddingLeft="16dp"
    android:background="@color/colorPrimaryDark">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/logo"
        android:textColor="@color/text_color"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@android:drawable/dialog_holo_light_frame"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/log_auth"
            android:hint="@string/txt_log"
            android:singleLine="true"
            android:gravity="center"
            android:background="@android:drawable/editbox_background"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/pass_auth"
            android:hint="@string/txt_pass"
            android:singleLine="true"
            android:gravity="center"
            android:background="@android:drawable/editbox_background"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="@dimen/activity_vertical_margin" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:paddingRight="32dp"
            android:paddingLeft="32dp">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/login"
                android:text="@string/enter_txt"
                android:id="@+id/log_btn"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_weight="1"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/register"
                android:text="@string/reg_act_btn"
                android:id="@+id/reg_btn"
                android:background="@android:drawable/dialog_holo_light_frame"
                android:layout_weight="1"/>

        </LinearLayout>

    </LinearLayout>





    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/test1"/>

</LinearLayout>