<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rounded">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/get_login_mess"
            android:layout_gravity="center_horizontal"
            android:singleLine="true"
            android:hint="@string/mess_field"
            android:gravity="center"
            android:background="@android:drawable/editbox_background"/>

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mess_btn"
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_open_dia"
            android:background="@android:drawable/dialog_holo_light_frame"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="18"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/mess_txt"
            android:id="@+id/textView"
            android:layout_weight="7"
            android:layout_gravity="center|top"
            android:gravity="center"/>

        <ListView
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:id="@+id/list_messes"
            android:layout_height="match_parent"
            android:orientation="vertical">

        </ListView>
    </LinearLayout>

</LinearLayout>